--- a/templates/item-sheet.html
+++ b/templates/item-sheet.html
@@ -18,32 +18,32 @@
                             <th>Equipped</th>
                             <td>
                                 <div class="item-attribute-flex-container">
-                                    <input type="checkbox" name="data.equipped" {{checked data.equipped}}>
+                                    <input type="checkbox" name="system.equipped" {{checked item.system.equipped}}>
                                 </div>
                             </td>
                         </tr>
                         <tr>
                             <th>Quantity</th>
-                            <td><input type="text" name="data.qty" value="{{data.qty}}"></td>
+                            <td><input type="text" name="system.qty" value="{{item.system.qty}}"></td>
                         </tr>
                         <tr>
                             <th>Armor Value</th>
-                            <td><input type="text" name="data.armor_value" value="{{data.armor_value}}"></td>
+                            <td><input type="text" name="system.armor_value" value="{{item.system.armor_value}}"></td>
                         </tr>
                         <tr>
                             <th>EV</th>
-                            <td><input type="number" name="data.encumbrance" value="{{data.encumbrance}}"></td>
+                            <td><input type="number" name="system.encumbrance" value="{{item.system.encumbrance}}"></td>
                         </tr>
                         <tr>
                             <th>Cost</th>
-                            <td><input type="number" name="data.cost" value="{{data.cost}}"></td>
+                            <td><input type="number" name="system.cost" value="{{item.system.cost}}"></td>
                         </tr>
                     </tbody>
                 </table>
             </div>
             <div class="item-description-sidebar">
                 <h2 class="item-desc">Description</h2>
-                {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
+                {{editor item.system.description target="system.description" button=true owner=owner editable=editable}}
             </div>
         </div>
     </section>
