--- a/templates/aspect-sheet.html
+++ b/templates/aspect-sheet.html
@@ -16,34 +16,34 @@
                     <tbody>
                         <tr>
                             <th>Power</th>
-                            <td><input type="number" name="data.power" value="{{data.power}}"></td>
+                            <td><input type="number" name="system.power" value="{{item.system.power}}"></td>
                         </tr>
                         <tr>
                             <th>HP+</th>
-                            <td><input type="number" name="data.resource_bonus.hp" value="{{data.resource_bonus.hp}}"></td>
+                            <td><input type="number" name="system.resource_bonus.hp" value="{{item.system.resource_bonus.hp}}"></td>
                         </tr>
                         <tr>
                             <th>Endurance+</th>
-                            <td><input type="number" name="data.resource_bonus.endurance_points" value="{{data.resource_bonus.endurance_points}}"></td>
+                            <td><input type="number" name="system.resource_bonus.endurance_points" value="{{item.system.resource_bonus.endurance_points}}"></td>
                         </tr>
                         <tr>
                             <th>Speed+</th>
-                            <td><input type="number" name="data.resource_bonus.speed" value="{{data.resource_bonus.speed}}"></td>
+                            <td><input type="number" name="system.resource_bonus.speed" value="{{item.system.resource_bonus.speed}}"></td>
                         </tr>
                         <tr>
                             <th>Essence+</th>
-                            <td><input type="number" name="data.resource_bonus.essence" value="{{data.resource_bonus.essence}}"></td>
+                            <td><input type="number" name="system.resource_bonus.essence" value="{{item.system.resource_bonus.essence}}"></td>
                         </tr>
                         <tr>
                             <th>Initiative+</th>
-                            <td><input type="number" name="data.resource_bonus.initiative" value="{{data.resource_bonus.initiative}}"></td>
+                            <td><input type="number" name="system.resource_bonus.initiative" value="{{item.system.resource_bonus.initiative}}"></td>
                         </tr>
                     </tbody>
                 </table>
             </div>
             <div class="item-description-sidebar">
                 <h2 class="item-desc">Description</h2>
-                {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
+                {{editor item.system.description target="system.description" button=true owner=owner editable=editable}}
             </div>
         </div>
     </section>
