Fixed rolls + deprecations for v12 + Added damage multiplier modifier + styling change to damage roll part1

--- a/templates/limited-character-sheet.html
+++ b/templates/limited-character-sheet.html
@@ -15,11 +15,8 @@
                             <a class="item" data-tab="equipment">Equipment</a>
                         </nav>
                         <select id="characterTypeSelect" name="system.characterType" data-type="String">
-                            {{#select actor.system.characterType}}
-                            {{#each actor.system.characterTypes as |characterTypes key|}}
-                            <option value="{{key}}">{{characterTypes}}</option>
-                            {{/each}}
-                            {{/select}}
+                            {{#selectOptions actor.system.characterTypes selected=actor.system.characterType}}
+                            {{/selectOptions}}
                         </select>
                     </div>
 
